<resources>
    <string name="app_name">RecetApp-BED</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RecetApp</string>
    <string name="nav_header_subtitle">recetapp@recetapp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <!--<string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>-->
    <!--<string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>-->
    <!-- Twitter consumer key and secret -->
    <!--<string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>-->
    <!--<string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>-->
    <string name="email_id">\tEmail</string>
    <string name="password">\tPassword</string>
    <string name="repassword">\tRepeat password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send">Send email</string>
    <string name="failed">Failed</string>
    <string name="height">\tHeight (cm)</string>
    <string name="weight">\tWeight (kg)</string>
    <string name="yearofbirth">\tYear of birth</string>
    <string name="gender">\tGender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="accept">Accept</string>
    <string name="typeofdiet">\tType of diet</string>
    <string name="omnivore">Omnivore</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="emailempty">Email is empty</string>
    <string name="passempty">Password is empty</string>
    <string name="passnotmatch">Passwords do not match</string>
    <string name="authfail">Authentication failed.</string>
    <string name="searchingredient">Search ingredient…</string>
    <string name="added_ingredients">Ingredients saved</string>
    <string name="excludeIngredients">Ingredients to exclude</string>
    <string name="increase_size">Increase text size</string>
    <string name="decrease_size">Decrease text size</string>
    <string name="logout">Logout</string>
    <string name="norecipes">No recipes found</string>
    <string name="recipelist">List of Recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipes">Recipes</string>
    <string name="perfil">Profile</string>
    <string name="imagePath">/data/data/com.dam.bed.recetapp_bed/files/images/</string>
    <string name="rememberpassword">Remember your password? Login</string>
    <string name="already_member">Already a member? Login</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="questionary">Questionary</string>


</resources>
